Transpilation
- added main declaration and proper module
- checking for main declaration identifier or multiple declarations on the same scope level when constructing a declarations node (some of these workings might change when type inference is implemented, as expressions would be typed only in their order of appearance and then the types substitutions would be unified)
- only use the type in Graphviz if it's present (this would also change, as with type inference there would always be a type to show)
- same with type checker, only if there's a declaration type (unfortunately the type checker is fundamentally quite broken, because of the confusion of only being able to check some types)
- CLI has the transpilation step and skipping flag, while also managing the module and working directory in a different way, more appropriate
- exception handler also prints the class of the error if unknown (essentially if unexpected)
- AST builder reflects the module and main changes
- the JavaPrelude is moved to a lib package
- the FunxPrelude is the prelude part that can be written in funx, and then transpiled with the project itself and placed within it
- the Java builder uses the same approach of the Graphviz builder, with a string builder and AST tree walking (visiting)
- gradle build is even more complex, now includes a task for prelude jar generation (to include it in the classpath when compiling or executing a transpiled source, will have a command in the CLI just to run the transpiled program), a distribution step, and the dependency for formatting the code in the JavaBuilder getter for the transpiled source